connect with db and created User Schema

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=5000
+MONGO_URI = mongodb+srv://kasiazlota87im:51dBSH2cybs0yEk3@cluster0.4cnsj.mongodb.net/ecommerce_db?retryWrites=true&w=majority&appName=Cluster0
