--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 PORT=5000
 MONGO_URI = mongodb+srv://kasiazlota87im:51dBSH2cybs0yEk3@cluster0.4cnsj.mongodb.net/ecommerce_db?retryWrites=true&w=majority&appName=Cluster0
+
+UPSTASH_REDIS_URL=rediss://default:AaROAAIjcDE3MzRiZWQ0ODA3N2U0NDQ5OTkzYjJhMDZiZDRhY2UyZXAxMA@heroic-crane-42062.upstash.io:6379
+
+ACCESS_TOKEN_SECRET= acces_token_secret
+REFRESH_TOKEN_SECRET = acces_token_secret
