Added createProduct function

--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ UPSTASH_REDIS_URL=rediss://default:AdcMAAIjcDE2MmE2ZjdkZTQ2N2Y0ZGY0OTg3NGI0MTE4M
 
 ACCESS_TOKEN_SECRET= acces_token_secret
 REFRESH_TOKEN_SECRET = acces_token_secret
+
+CLOUDINARY_CLOUD_NAME=duuts0flw
+CLOUDINARY_API_KEY=397182464843834
+CLOUDINARY_API_SECRET=mYVXm8ABvfv67tblipjzQRk4YEU
